--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -1,1 +1,58 @@
-My-Awesome-Cart-Website
+{% extends 'shop/basic.html' %}
+{% block title%} {{product.product_name}} - My Awesome Cart{% endblock %}
+{% block body %}
+
+<style>
+#butt{
+    position: relative;
+    top: 30px;
+}
+#text{
+    position: relative;
+}
+@media (max-width:767px){
+#butt{
+    position: relative;
+    top:5px;
+}
+}
+</style>
+
+
+
+
+
+<div class="row g-0 bg-light position-relative">
+  <div class="col-md-2 mb-md-0 p-md-1">
+    <img src="/media/{{product.image}}" class="w-100" alt="...">
+    <a href="/shop/order/{{product.id}}"><button class="btn btn-primary mx-3" id="butt">Buy Now</button></a>
+    <br>
+  </div>
+  <div class="col-md-6 p-4 ps-md-0">
+    <p class="mt-0" style="font-size:25px;">Product Name:-<b>{{product.product_name}}</b></p>
+    <h5>Price:- ${{product.price}}</h5>
+    <br>
+    <p id ="des"><b>Description</b><br>{{product.des}}</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+  </div>
+</div>
+<h3>Related Products:-</h3>
+<hr></hr>
+    {% for prod in prod %}
+    {% if prod.category == product.category and prod.product_name != product.product_name %}
+    <label for="img"></label>
+    <h3><img src="/media/{{prod.image}}" width="190px"height="170px" id="img"><a href="/shop/productview/{{prod.id}}">{{prod.product_name}}</a></img></h3><br>
+    {% else %}
+    <p></p>
+      {% endif %}
+      {% endfor %}
+
+
+
+{% endblock %}
