--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -40,7 +40,10 @@
 <br>
 <br>
 <br>
-      <h3>Related Products:-</h3>
+  </div>
+</div>
+<h3>Related Products:-</h3>
+{{product.product_name}}
 <hr></hr>
     {% for prod in prod %}
     {% if prod.category == product.category and prod.product_name != product.product_name %}
@@ -50,8 +53,6 @@
     <p></p>
       {% endif %}
       {% endfor %}
-</div>
-</div>
 
 
 
