--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -43,7 +43,7 @@
   </div>
 </div>
 <h3>Related Products:-</h3>
-{{product.product_name}}
+{{prod.product_name}}
 <hr></hr>
     {% for prod in prod %}
     {% if prod.category == product.category and prod.product_name != product.product_name %}
