--- a/templates/shop/contact.html
+++ b/templates/shop/contact.html
@@ -28,10 +28,10 @@
 
 
 
-          <div class="form-group">
    <div class="form-group">
     <label for="desc">How May We Help You ?</label>
     <textarea class="form-control" id="des" name="des" rows="3"></textarea><br></b>
+  </div>
 
 
 
