--- a/templates/shop/orderrequest.html
+++ b/templates/shop/orderrequest.html
@@ -15,12 +15,8 @@
     width: 130px;
     height: 120px;
 }
-<<<<<<< HEAD
-h3,h4,a{
-=======
-h3,h4{
->>>>>>> d53a258a25bea0cb3d87ed4d37931dd8fdcecde8
-	font-size:12px;
+#text{
+	font-size:14px;
 }
 }
 </style>
@@ -29,11 +25,11 @@ h3,h4{
 <div class="d-flex position-relative">
   <img src="/media/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
-    <h3 class="mt-0"><b>Buyer Name:-</b>{{order.name}}</h3>
-    <h4><b>Email Address:-</b>{{order.email}}</h4>
-    <h4><b>Address:-</b>{{order.address1}},{{order.address2}}</h4>
-    <h4><b>Phone number:-</b>{{order.phone}}</h4>
-    <a href="/shop/moredetail/{{order.id}}">More details></a>
+    <h3 id="text" class="mt-0"><b>Buyer Name:-</b>{{order.name}}</h3>
+    <h4 id="text"><b>Email Address:-</b>{{order.email}}</h4>
+    <h4 id="text"><b>Address:-</b>{{order.address1}},{{order.address2}}</h4>
+    <h4 id="text"><b>Phone number:-</b>{{order.phone}}</h4>
+    <a id="text" href="/shop/moredetail/{{order.id}}">More details></a>
   </div>
 </div>
 <br>
@@ -41,13 +37,10 @@ h3,h4{
 
 
 
-
-
-
 {% endif %}
 {% endfor %}
 {%else%}
-<h2>Please sign in to see your Orders</h2>
+<h2>Please sign in to see your Orders Request</h2>
 <a href="/" class="btn btn-danger">Sign in Here</a>
 {%endif%}
 {%endblock%}
