--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -33,8 +33,26 @@
     <h5>Price:- ${{product.price}}</h5>
     <br>
     <p id ="des"><b>Description</b><br>{{product.des}}</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
   </div>
 </div>
+<h3>Related Products:-</h3>
+<hr></hr>
+    {% for prod in prod %}
+    {% if prod.category == product.category and prod.product_name != product.product_name %}
+    <label for="img"></label>
+    <h3><img src="/media/{{product.image}}" width="190px"height="170px" id="img"><a href="/shop/productview/{{prod.id}}">{{product.product_name}}</a></img></h3><br>
+    {% else %}
+    <p></p>
+      {% endif %}
+      {% endfor %}
+
 
 
 {% endblock %}
