--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -50,6 +50,10 @@ h3 {
   h3{
     font-size: 16px;
   }
+  #img{
+    width: 120px;
+    height: 100px;
+  }
 }
 </style>
 <h4><b><u>Related Products:-</b></u></h4>
