--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -137,7 +137,6 @@ width:60%;
             
 
 
-               <br>
                <style>
                #method{
                 width: 200px;
@@ -147,7 +146,7 @@ width:60%;
                  <select name="order_method" id="method">
                     <option value="CASH ON DELIVERY">CASH ON DELIVERY</option>
                     <option value="CARD METHOD">CARD METHOD</option>
-                 </select><br><br><br>
+                 </select><br><br>
 
 
 
