--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -61,7 +61,7 @@ h3 {
     {% for prod in prod %}
     {% if prod.category == product.category and prod.product_name != product.product_name %}
     <label for="img"></label>
-    <h3><img src="/media/{{prod.image}}" width="190px"height="170px" id="img">&nbsp;&nbsp;&nbsp;&nbsp;<a href="/shop/productview/{{prod.id}}">{{prod.product_name|slice:"0:22"}}..</a></img></h3><br>
+    <h3><a href="/shop/productview/{{prod.id}}"><img src="/media/{{prod.image}}" width="190px"height="170px" id="img"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/shop/productview/{{prod.id}}">{{prod.product_name|slice:"0:22"}}..</a></img></h3><br>
     {% else %}
     <p></p>
       {% endif %}
