--- a/templates/shop/orderrequest.html
+++ b/templates/shop/orderrequest.html
@@ -1,5 +1,5 @@
 {% extends 'shop/basic.html' %}
-{% block title %}View Order{% endblock %}
+{% block title %}Order Request{% endblock %}
 {%block body%}
 {%if user.is_authenticated%}
 {% for order in order %}
@@ -25,10 +25,10 @@
 <div class="d-flex position-relative">
   <img src="/media/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
-    <h3 id="text" class="mt-0"><b>Buyer Name:-</b>{{order.name}}</h3>
-    <h4 id="text"><b>Email Address:-</b>{{order.email}}</h4>
-    <h4 id="text"><b>Address:-</b>{{order.address1}},{{order.address2}}</h4>
-    <h4 id="text"><b>Phone number:-</b>{{order.phone}}</h4>
+    <h3 id="text" class="mt-0"><b><u>Buyer Name:-</u></b>{{order.name}}</h3>
+    <h4 id="text"><b><u>Email Address:-</u></b>{{order.email}}</h4>
+    <h4 id="text"><b><u>Address:-</u></b>{{order.address1}},{{order.address2}}</h4>
+    <h4 id="text"><b><u>Phone number:-</u></b>{{order.phone}}</h4>
     <a id="text" href="/shop/moredetail/{{order.id}}">More details></a>
   </div>
 </div>
