--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -137,12 +137,16 @@ width:60%;
             
 
 
-            
-                <label for="order_method">PLEASE CHOOSE METHOD OF PAYMENT</label>
-                 <select name="order_method" class="form-control" id="method">
+               <style>
+               #method{
+                width: 200px;
+               }
+               </style>
+                <label for="order_method">PLEASE CHOOSE METHOD OF PAYMENT</label><br>
+                 <select name="order_method" id="method">
                     <option value="CASH ON DELIVERY">CASH ON DELIVERY</option>
                     <option value="CARD METHOD">CARD METHOD</option>
-                 </select><br>
+                 </select><br><br>
 
 
 
