--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -32,7 +32,7 @@
     <p class="mt-0" style="font-size:25px;">Product Name:-<b>{{product.product_name}}</b></p>
     <h5>Price:- ${{product.price}}</h5>
     <br>
-    <p id ="des"><b>Description</b><br>{{product.des}}</p>
+    <p id ="des"><b>Description</b><br>{{product.des|safe}}</p>
 <br>
 <br>
 <br>
