--- a/templates/shop/edit.html
+++ b/templates/shop/edit.html
@@ -61,7 +61,7 @@
     </script>
   </head>
 <body>
-      <input name="des" id="des">Hello, World!</textarea>
+      <input name="des" id="des" value="{{product.des}}"></input>
   </body>
 </html>
 
