--- a/templates/shop/edit.html
+++ b/templates/shop/edit.html
@@ -34,7 +34,7 @@
         </div>
         <br>
 
-
+<h5>Discription:-</h5>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -63,7 +63,7 @@
 <body>
       <input name="des" id="des" value="{{product.des}}"></input>
   </body>
-</html>
+</html><br>
 
 
         <div class="form-group">
