--- a/templates/shop/edit.html
+++ b/templates/shop/edit.html
@@ -44,6 +44,8 @@
     <script>
       tinymce.init({
         selector: '#des',
+        width:1400,
+        height:656,
         plugins: [
       'advlist autolink link image lists charmap print preview hr anchor pagebreak',
       'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
