--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -25,7 +25,7 @@
 <div class="row g-0 bg-light position-relative">
   <div class="col-md-2 mb-md-0 p-md-3">
     <img src="/media/{{product.image}}" class="w-100" alt="...">
-    <a href="/shop/order/{{product.id}}"><button class="btn btn-primary mx-3" id="butt">Buy Now</button></a>
+    <a href="/shop/order/{{product.id}}"><button class="btn btn-dark mx-3" id="butt">Buy Now</button></a>
     <br>
   </div>
   <div class="col-md-6 p-4 ps-md-0">
