--- a/templates/shop/edit.html
+++ b/templates/shop/edit.html
@@ -34,18 +34,16 @@
         </div>
         <br>
 
-<h5>Discription:-</h5>
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="https://cdn.tiny.cloud/1/soqyplka7sxal4ddpt6rdne1vaw393qhhvtqhd9wvlx6dpck/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
       tinymce.init({
         selector: '#des',
-        width:1130,
-        height:656,
+        height:400,
         plugins: [
       'advlist autolink link image lists charmap print preview hr anchor pagebreak',
       'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
@@ -55,7 +53,7 @@
       'bullist numlist outdent indent | link image | print preview media fullpage | ' +
       'forecolor backcolor emoticons | help',
     menu: {
-      favs: {title: 'My Favorites', items: 'code visualaid | searchreplace | emoticons'}
+      favs: {title: 'My Awesome Cart Shopping', items: 'code visualaid | searchreplace | emoticons'}
     },
     menubar: 'favs file edit view insert format tools table help',
     content_css: 'css/content.css'
@@ -63,7 +61,8 @@
     </script>
   </head>
 <body>
-      <input name="des" id="des" value="{{product.des}}"></input>
+  <label for="des"><h5>Description:-</h5></label>
+  <input name="des" id="des" value="{{product.des}}"></input>
   </body>
 </html><br>
 
