--- a/templates/shop/sellproduct.html
+++ b/templates/shop/sellproduct.html
@@ -81,10 +81,37 @@
         </div><br>
 
 
-        <div class="form-group">
-          <label for="{{form.file_des.id_for_label}}">description of the Product</label>
-          {{form.file_des}}     
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+      tinymce.init({
+        selector: '#des',
+        height:400,
+        plugins: [
+      'advlist autolink link image lists charmap print preview hr anchor pagebreak',
+      'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
+      'table emoticons template paste help'
+    ],
+    toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | ' +
+      'bullist numlist outdent indent | link image | print preview media fullpage | ' +
+      'forecolor backcolor emoticons | help',
+    menu: {
+      favs: {title: 'My Favorites', items: 'code visualaid | searchreplace | emoticons'}
+    },
+    menubar: 'favs file edit view insert format tools table help',
+    content_css: 'css/content.css'
+      });
+    </script>
+  </head>
+<body>
+  <label for="des">Description:-</label>
+  <input name="des" id="des"></input>
+  </body>
+</html>
 
 
         <div class="form-group">
