--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -35,8 +35,8 @@
     <br>
   </div>
   <div class="col-md-6 p-4 ps-md-0">
-    <p class="mt-0" style="font-size:25px;">Product Name:-<b>{{product.product_name}}</b></p>
-    <h5>Price:- ${{product.price}}</h5>
+    <p class="mt-0" style="font-size:25px;"><u>{{product.product_name}}</u></p>
+    <p><span style="color: #000000;"><b>Price:-</b><strong> <span style="color: #FFBA67;font-size:25px;">${{product.price}}</span></strong></span></p>
     <br>
     <p id ="des"><b><u>Description:-</u></b></p>{{product.des|safe}}
 <br>
