--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -1,9 +1,8 @@
 {% extends 'shop/basic.html' %}
 {% block title %}Home{% endblock %}
+{% block body %}
 
-
-
-{% block css %}
+<style>
 .d-block{
     width:1200px;
     height:530px;
@@ -11,10 +10,6 @@
 #img{
     width: 280px;
     height: 300px;
-}
-.btn{
-    position:relative;
-    top:140px;
 }
 #hori{
   border-top: 3px solid black;
@@ -43,17 +38,11 @@
     height:180px;
 
 }
-.btn{
-    position:relative;
-    top:10px;
 }
-{% endblock %}
+</style>
 
 
 
-
-
-{% block body %}
 
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -81,15 +70,6 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
-
-
-
-
-
-
-
-
 
 
 
