--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -304,7 +304,7 @@
 </li>
 
       <form class="d-flex" method="get" action="/shop/search">
-        <input class="form-control me-2" type="search" placeholder="Search" name="search" id="search" aria-label="Search">
+        <input class="form-control me-2" type="search" placeholder="Search Product Here" name="search" id="search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
 
