--- a/templates/shop/search.html
+++ b/templates/shop/search.html
@@ -1,7 +1,6 @@
 {% extends 'shop/basic.html' %}
 
 {% block title %} Search Results {% endblock title %}
-{% block blogactive %} active {% endblock blogactive %} 
 
 
 {% block body %}
@@ -10,6 +9,12 @@
 #img{
 	width: 200px;
 	height:200px;
+}
+@media(max-width: 768px){
+#img{
+	width: 120px;
+	height: 120px;
+}	
 }
 </style>
 
