--- a/templates/shop/orderrequest.html
+++ b/templates/shop/orderrequest.html
@@ -36,9 +36,14 @@
 <br>
 
 
-
 {% endif %}
 {% endfor %}
+
+<hr style="height:2px;color:black;"></hr>
+<center><h3><u>You Don't Have More Order Request</u></h3></center>
+<hr style="height:2px;color:black;"></hr><br>
+
+
 {%else%}
 <h2>Please sign in to see your Orders Request</h2>
 <a href="/" class="btn btn-danger">Sign in Here</a>
