--- a/templates/shop/search.html
+++ b/templates/shop/search.html
@@ -18,13 +18,20 @@
 }
 </style>
 
+
 <div class="container my-3">
+	{% if product|length < 1 %}
+    <h2><u>No Search Result</u></h2><br>
+    <h5>Your search - <b>{{search}}</b> - did not match any documents.<br>
+	Suggestions:<br>
+	Try different keywords..</h5>
+	{% else %}
     <h2>Search results : </h2>
     {% for product in product %}
     <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 my-4 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
+        <div>
 		<div class="d-flex position-relative">
-		  <a href="/shop/productview/{{product.id}}"><img src="/media/{{product.image}}" class="flex-shrink-0 me-3" alt="..." id="img"></a>
+		  <a href="/shop/productview/{{product.id}}"><img src="/media/{{product.image}}"  alt="..." id="img"></a>
 		  <div>
 		    <a href="/shop/productview/{{product.id}}"><h3 class="mt-0" style="margin-left:20px;">{{product.product_name}}</h3></a>
 		    <h5 class="card-title" style="margin-left:20px;">Price:-${{product.price}}</h5>
@@ -39,5 +46,6 @@
 
 
         {% endfor %}
+        {% endif %}
     </div>
  {% endblock %}
