--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -72,21 +72,18 @@
 </div>
 
 
-
 {% for product, range, nSlides in allprods %}
     <hr id="hori"></hr>
-    <h5 class="col-9 row-9 my-2">Flash Sale on <b><u>{{product.0.category}}</u></b> Items</h5>
+    <h5><li>Newly Released <b><u>{{product.0.category}}</u></b> Products</li></h5>
     <hr id="hori"></hr>
-    {%for i in product%}
-
-
+    {%for product in product %}
 
 <div class="d-flex position-relative">
-  <a href="/shop/productview/{{i.id}}"><img src="/media/{{i.image}}" class="flex-shrink-0 me-3" alt="..." id="img"></a>
+  <a href="/shop/productview/{{product.id}}"><img src="/media/{{product.image}}" class="flex-shrink-0 me-3" alt="..." id="img"></a>
   <div>
-    <a href="/shop/productview/{{i.id}}"><h3 class="mt-0" style="margin-left:20px;">{{i.product_name}}</h3></a>
-    <h5 class="card-title" style="margin-left:20px;">Price:-${{i.price}}</h5>
-    <a href="/shop/order/{{i.id}}" class="btn btn-dark" style="margin-left:20px;">Buy Now</a>
+    <a href="/shop/productview/{{product.id}}"><h3 class="mt-0" style="margin-left:20px;">{{product.product_name}}</h3></a>
+    <h5 class="card-title" style="margin-left:20px;">Price:-${{product.price}}</h5>
+    <a href="/shop/order/{{product.id}}" class="btn btn-dark" style="margin-left:20px;">Buy Now</a>
   </div>
 </div>
 <hr id="horii"></hr>
@@ -94,6 +91,21 @@
 {%endfor%}
 
 
+<style>
+#butt{
+  float: right;
+}
+</style>
+        {% if product.has_previous %}
+          <a href="/shop/?page={{product.previous_page_number}}"><button class="btn btn-secondary">Previous</button></a>
+        {% endif %}
+
+        {% if product.has_next %}
+          <a href="/shop/?page={{ product.next_page_number }}"><button class="btn btn-secondary" id="butt">next</button></a>
+        {% endif %}
+        <br>
+        <br>
+<h1></h1>
 
 
 
