--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -310,15 +310,12 @@
 </ul>
 </li>
 <style>
+@media(min-width: 768px){
 #bar{
   margin-left:200px;
 }
 #search{
   width:320px;
-}
-@media(max-width: 768px){
-#search{
-  width: auto;
 }
 }
 </style>
