--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -78,6 +78,9 @@
 #cate{
   font-size: 17px;
 }
+#name{
+  font-size:18px;
+}
 }
 </style>
     <hr id="hori"></hr>
@@ -88,7 +91,7 @@
 <div class="d-flex position-relative">
   <a href="/shop/productview/{{product.id}}"><img src="/media/{{product.image}}" class="flex-shrink-0 me-3" alt="..." id="img"></a>
   <div>
-    <a href="/shop/productview/{{product.id}}"><h3 class="mt-0" style="margin-left:20px;">{{product.product_name}}</h3></a>
+    <a href="/shop/productview/{{product.id}}"><h3 class="mt-0" id="name" style="margin-left:20px;">{{product.product_name}}</h3></a>
     <h5 class="card-title" style="margin-left:20px;">Price:-${{product.price}}</h5>
     <a href="/shop/order/{{product.id}}" class="btn btn-dark" style="margin-left:20px;">Buy Now</a>
   </div>
