--- a/templates/shop/sellproduct.html
+++ b/templates/shop/sellproduct.html
@@ -71,13 +71,14 @@
 
         <div class="form-group">
           <label for="{{form.file_subcategory.id_for_label}}">Product Subcategory</label>
-          {{form.file_subcategory}}       
+          {{form.file_subcategory}}     
         </div><br>
 
 
         <div class="form-group">
-          <label for="{{form.file_price.id_for_label}}">Product Price</label>
-          {{form.file_price}}        
+        <label for="{{form.file_price.id_for_label}}">Product Price</label>
+        {{form.file_price}}     
+
         </div><br>
 
 
@@ -109,7 +110,7 @@
   </head>
 <body>
   <label for="des">Description:-</label>
-  <input name="des" id="des"></input>
+  <input name="des" id="des" placeholder="Enter Description Here"></input>
   </body>
 </html>
 
