--- a/templates/shop/view.html
+++ b/templates/shop/view.html
@@ -1,5 +1,5 @@
 {% extends 'shop/basic.html' %}
-{% block title %} Another View {% endblock %}
+{% block title %} All Products {% endblock %}
 {%block body%}
 <body>
 
