--- a/templates/shop/about.html
+++ b/templates/shop/about.html
@@ -21,7 +21,7 @@
         <p><a class="btn btn-secondary" href="/shop" role="button">Buy &raquo;</a></p>
       </div>
       <div class="col-md-4">
-        <h2>Seller</h2>
+        <h2>Become a Seller</h2>
         <p>Sell Your Product</p>
         <p><a class="btn btn-secondary" href="/shop/sellproduct" role="button">Sell &raquo;</a></p>
       </div>
