--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -219,7 +219,6 @@
         For selling product You have to login first:-
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Login/Signup</button>
         <a href="/"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Login/Signup</button></a>
       </div>
     </div>
@@ -267,9 +266,9 @@
   {% if user.is_authenticated %}
 <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="droplist">
   <li><a class="dropdown-item" href="/shop/view"><p style="color:black;"><b>All Products</b></p></a></li>
+ <li><a class="dropdown-item" href="/shop/cart"><p style="color:black;"><b>My Cart</b></p></a></li>
   <li><a class="dropdown-item" href="/shop/orderrequest"><p style="color:black;"><b>Order request</b></p></a></li>
   <li><a class="dropdown-item" href="/shop/yourproduct"><p style="color:black;"><b>Your product</b></p></a></li>
-  <li><a class="dropdown-item" href="/"><p style="color:black;"><b>Login with another account</b></p></a></li>
   <li><a class="dropdown-item" href="/signout"><p style="color:black;"><b>Logout</b></p></a></li>
   {% if request.user.id == 21 or request.user.id == 1 %}
   <li><a class="dropdown-item" href="/admin"><p style="color:black;"><b>Admin Panel</b></p></a></li>
