--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -2,6 +2,9 @@
 {% block title %}My Cart{% endblock %}
 {% block body %}
 {%if user.is_authenticated%}
+<h1></h1>
+<center><h2>Add To Cart Products</h2></center>
+<hr>
 </style>
 <div class="container mt-1">
     <div class="row">
@@ -11,7 +14,7 @@
                   <tr>
                     <th><h5 id="text">Product Image</h5></th>
                     <th><h5 id="text">Product Name/Price</h5></th>
-                    <th><h5 id="text">Remove From Add To Cart</h5></th>
+                    <th><h5 id="text">Delete</h5></th>
                   </tr>
                 </thead>
                 <tbody>
