--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -3,7 +3,7 @@
 {% block body %}
 {%if user.is_authenticated%}
 <h1></h1>
-<center><h2>Add To Cart Products</h2></center>
+<center><h2><u>Add To Cart Products</u></h2></center>
 <hr>
 </style>
 <div class="container mt-1">
