--- a/templates/shop/view.html
+++ b/templates/shop/view.html
@@ -10,9 +10,10 @@
                     <thead>
                       <tr>
                         <th><h5 id="text">Product Image</h5></th>
-                        <th><h5 id="text">Product Name</h5></th>
-                        <th><h5 id="text">Product Price</h5></th>
+                        <th><h5 id="text">Product Name/Price</h5></th>
+                        {% if user.is_authenticated %}
                         <th><h5 id="text">Add To Cart</h5></th>
+                        {% endif %}
                       </tr>
                     </thead>
                     <tbody>
@@ -34,8 +35,7 @@
 }
 </style>
                         <th><a href="/shop/productview/{{d.id}}"><img src="{{d.image.url}}" id="img"></a></th>
-                        <th><h4 id="text"><a href="/shop/productview/{{d.id}}">{{d.product_name}}</a></h4></th>
-                        <th><h5 id="text">${{d.price}}</h5></th>
+                        <th><h4 id="text"><a href="/shop/productview/{{d.id}}">{{d.product_name}}</a></h4><h5 id="text">${{d.price}}</h5></th>
                         {% if user.is_authenticated %}
 <style>
 @media(max-width: 768px){
