--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -13,7 +13,7 @@
                 <thead>
                   <tr>
                     <th><h5 id="text">Product Image</h5></th>
-                    <th><h5 id="text">Product Name/Price</h5></th>
+                    <th><h5 id="text">Product Name/Price/quantity</h5></th>
                     <th><h5 id="text">Delete</h5></th>
                   </tr>
                 </thead>
@@ -44,7 +44,7 @@
 }
 </style>
                         <th><a href="/shop/productview/{{cart.product_id}}"><img src="/media/{{cart.image_p}}" id="img" ></a></th>
-                        <th><a href="/shop/productview/{{cart.product_id}}"><h4 id="text">{{cart.name_p}}</h4></a><h4 id="text">${{cart.price_p}}</h4></th>
+                        <th><a href="/shop/productview/{{cart.product_id}}"><h4 id="text">{{cart.name_p}}</h4></a><h4 id="text">${{cart.price_p}}</h4><h6 id="text">Quantity:-{{cart.quantity}}</h6></th>
                         <th><a href="cart_delete/{{cart.id}}"><button id="add_button" class="btn btn-danger">Remove</button></a></th>
                         {% endif %}
                         {% endfor %}
